--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,37 @@
 .email{
 	color: white;
 }
+
+.links{
+	
+  	text-decoration: none; /* no underline */
+  	color:#343c44;
+}
+.card{
+	border:none;
+}
+
+.card *:hover{
+	text-decoration: none !important;
+
+}
+#a:hover + #b{
+	color:white !important;
+}
+
+
+body {
+    font-family: 'Poppins';font-size: 22px;
+    height: 100%
+}
+
+.container{
+	padding:0px;
+	
+
+}
+.row{
+	padding:0px;
+	
+}
+
