--- a/blog/index.css
+++ b/blog/index.css
@@ -1,59 +1,115 @@
+#blog img {
+  border-radius: var(--border-radius);
+  max-width: 100%;
+}
+
+/* Blog Page Wrapper */
 #blog .wrapper {
   display: flex;
   flex-direction: column;
   gap: var(--main-spacing);
 }
+#blog .wrapper h1,
+#blog .wrapper .blogs-grid,
+#blog .wrapper .blogs-list {
+  border-bottom: 3px solid var(--grey-400);
+  padding-bottom: var(--main-spacing);
+}
+#blog .wrapper > *:last-child { border-bottom: 0; }
 
-#blog article {
+.blogs-grid {
+  display: grid;
+  gap: var(--main-spacing);
+  grid-template-columns: repeat( auto-fit, minmax( min(20em, 100%), 1fr) );
+  /* align-items: start; */
+}
+
+.blogs-grid article {
+  max-width: 100%;
+  overflow: hidden;
+  background: var(--grey-100);
+  border-radius: var(--border-radius);
+  padding: var(--main-spacing);
+
+  display: flex;
+  flex-direction: column;
+  gap: calc(var(--main-spacing) / 2);
+}
+
+.blogs-grid article a.btn {
+  align-self: flex-start;
+}
+
+
+.blogs-list {
+  display: flex;
+  flex-direction: column;
+  gap: var(--main-spacing);
+}
+.blogs-list article:not(:last-child) {
+  border-bottom: 3px solid var(--grey-100);
+  padding-bottom: var(--main-spacing);
+}
+
+
+/* Blog Posts -------------------------------------------------------------- */
+
+/* Blog Post Layout */
+/* mobile is a column, with sidebar below article text */
+#blogpost .wrapper {
   display: flex;
   flex-direction: column;
   gap: calc(var(--main-spacing) * 2);
-  border-bottom: 1px solid var(--grey-600);
-  padding-bottom: var(--main-spacing);
 }
+/* desktop is a row, with sidebar to the right of article text */
 @media (min-width: 1000px) {
-  #blog article { flex-direction: row; }
-  #blog article .article-text { width: 75%; }
-  #blog article aside { width: 25%; }
+  #blogpost .wrapper {
+    flex-direction: row;
+    align-items: flex-start;
+  }
+  #blogpost article { width: 75%; }
+  #blogpost aside { width: 25%; }
 }
 
-#blog article img {
-  align-self: center;
+
+/* Blog Post Custom Tags */
+/* rounded corners on code snippets and images */
+#blogpost code,
+#blogpost img {
   border-radius: var(--border-radius);
-  max-width: 100%;
 }
-
-#blog article .article-text {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  max-width: 100%;
-  overflow-x: hidden;
-}
-#blog article .article-text > * { border-radius: var(--border-radius); }
-
-#blog article .article-date { color: var(--grey-500); }
-
-.article-text img {
+/* images */
+#blogpost img {
   align-self: center;
   max-width: 100%;
 }
-.article-text figure {
+/* figures - images with captions */
+#blogpost figure {
   padding: var(--main-spacing);
   text-align: center;
 }
-.article-text figcaption {
+#blogpost figure figcaption {
   font-style: italic;
   color: var(--grey-500);
 }
 
-#blog article aside {
+
+/* Blog Post Article */
+#blogpost article {
+  display: flex;
+  flex-direction: column;
+  gap: var(--main-spacing);
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+
+/* Blog Post Sidebar */
+#blogpost aside {
   background: var(--grey-100);
   border-radius: var(--border-radius);
   display: flex;
   flex-direction: column;
   gap: var(--main-spacing);
   padding: var(--main-spacing);
-  height: fit-content;
 }
-#blog article aside > * { border-radius: var(--border-radius); }
