--- a/main.css
+++ b/main.css
@@ -7,11 +7,12 @@
   /* colors */
   --light: #ffffff;
   --grey-100: #f5f5f5;
-  --grey-200: #b5bec7;
+  --grey-200: #dedede;
   /* --grey-300: #929ca6; */
   --grey-400: #78818a;
   --grey-500: #5e6770;
   --grey-600: #343a40;
+  /* --blue-400: #209cee; */
   --blue-500: #2282e0;
   --blue-600: #1f6bb5;
 
@@ -75,6 +76,15 @@ code {
   padding: var(--main-spacing);
 }
 
+/* figures - images with captions */
+figure {
+  text-align: center;
+}
+figure figcaption {
+  font-style: italic;
+  color: var(--grey-500);
+}
+
 /* set custom heading font sizes */
 h1 { font-size: 2.5rem; }
 h2 { font-size: 2rem; }
@@ -82,6 +92,16 @@ h3 { font-size: 1.5rem; }
 h4 { font-size: 1.25rem; }
 h5 { font-size: 1rem; }
 h6 { font-size: 0.75rem; }
+
+/* images and videos */
+img,
+video {
+  border-radius: var(--border-radius);
+  max-width: 100%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 /* Lists */
 ol,
@@ -95,20 +115,18 @@ ul li { padding-left: 1em; }
 ol li { list-style: decimal inside; }
 ul li { list-style: inside; }
 
-svg {
-  fill: var(--light);
+/* main page content section */
+main .wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: var(--main-spacing);
 }
+
+/* svg defaults */
+svg { fill: var(--light); }
 
 
 /* Custom Classes ----------------------------------------------------------- */
-a.btn {
-  background: var(--blue-500);
-  color: var(--light);
-  padding: 0.5em 1em;
-  border-radius: 300px;
-}
-a.btn:hover { background: var(--blue-600); }
-
 #breadcrumbs {
   display: flex;
   flex-wrap: wrap;
@@ -117,6 +135,74 @@ a.btn:hover { background: var(--blue-600); }
 
 /* blog post date text */
 .date-text { color: var(--grey-500); }
+
+
+figure.emphasized figcaption {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 2rem;
+}
+
+.flex {
+  display: flex;
+  gap: var(--main-spacing);
+}
+
+/* standard grid */
+.grid {
+  display: grid;
+  gap: var(--main-spacing);
+  grid-template-columns: repeat( auto-fit, minmax( min(20em, 100%), 1fr) );
+}
+/* grid article cards */
+.grid article {
+  max-width: 100%;
+  overflow: hidden;
+  background: var(--grey-100);
+  border-radius: var(--border-radius);
+  padding: var(--main-spacing);
+  display: flex;
+  flex-direction: column;
+  gap: calc(var(--main-spacing) / 2);
+}
+.grid article img {
+  aspect-ratio: 2 / 1;
+  object-fit: cover;
+  width: 100%;
+}
+.grid article h1,
+.grid article h2,
+.grid article h3,
+.grid article h4,
+.grid article h5,
+.grid article h6,
+.grid article a {
+  line-height: 1.25em;
+}
+
+.inset-block {
+  padding-left: var(--main-spacing);
+  padding-right: var(--main-spacing);
+}
+
+/*
+  Page Title Area:
+  - either just an h1 tag,
+  - or a container with an h1 and other details inside.
+  (underline it)
+*/
+#overview, h1 {
+  border-bottom: 3px solid var(--grey-400);
+  padding-bottom: var(--main-spacing);
+}
+/*
+  remove underline if h1 is inside overview container,
+  since container already has the underline
+*/
+#overview h1 {
+  border-bottom: 0;
+  padding: inherit;
+}
 
 /* page wrapper to center content */
 .wrapper {
@@ -144,10 +230,7 @@ header nav {
 }
 header nav a { color: var(--light); }
 
-#header-title {
-  font-size: 1.25em;
-  font-weight: bold;
-}
+#header-title { line-height: 0; }
 #header-title ~ * { display: none; }
 
 #main-nav { align-items: flex-end; }
