--- a/main.css
+++ b/main.css
@@ -153,7 +153,7 @@ figure.emphasized figcaption {
 .grid {
   display: grid;
   gap: var(--main-spacing);
-  grid-template-columns: repeat( auto-fit, minmax( min(20em, 100%), 1fr) );
+  grid-template-columns: repeat( auto-fill, minmax( min(20em, 100%), 1fr) );
 }
 /* grid article cards */
 .grid article {
