--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
 
 /* Global Variables --------------------------------------------------------- */
 * {
-  /* colors */
+  /* Colors */
   --light: #ffffff;
   /* --grey-050: #f5f5f5; */
   --grey-100: #ededed;
@@ -13,11 +13,11 @@
   --grey-400: #78818a;
   --grey-500: #5e6770;
   --grey-600: #343a40;
-  /* --blue-400: #209cee; */
+  --blue-400: #209cee;
   --blue-500: #2282e0;
   --blue-600: #1f6bb5;
 
-  /* units */
+  /* Units */
   --border-radius: 8px;
   --main-spacing: 16px;
   --page-width: 1150px;
@@ -32,7 +32,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  line-height: 1.5em;
+  line-height: 1.5em;  /* this sometimes has to be unset (e.g. headings) */
 }
 
 
@@ -47,28 +47,22 @@ a:hover {
 }
 
 body {
-  /* prevent any overflow from breaking layout */
-  overflow-x: hidden;
-  /* grid background */
+  overflow-x: hidden;  /* failsafe - prevent overflow from breaking layout */
+  /* Grid Background */
   background-image:
     linear-gradient(#f5f5f5 1px, transparent 1px),
     linear-gradient(to right, #f5f5f5 1px, #ffffff 1px);
   background-size: 20px 20px;
-  /* scrollbar always active to prevent layout shifts */
+  /* Scrollbar Always Active - prevents layout shifts */
   overflow-y: scroll;
-  /* Force footer to bottom of screen. */
+  /* Force footer to Bottom of Screen. */
   min-height: 100vh;  /* body is always at least as tall as the device screen */
   display: flex;           /* The body element aligns its direct children... */
   flex-direction: column;  /* ...into a vertical column and... */
 }
 main { flex: 1; }          /* ...the main element fills all available height. */
 
-button {
-  cursor: pointer;
-  background: 0;
-  border: 0;
-}
-
+/* Code Snippets */
 code {
   display: block;
   background: var(--grey-100);
@@ -79,7 +73,7 @@ code {
   padding: var(--main-spacing);
 }
 
-/* figures - images with captions */
+/* Figures (images with captions) */
 figure {
   text-align: center;
 }
@@ -88,15 +82,17 @@ figure figcaption {
   color: var(--grey-500);
 }
 
-/* set custom heading font sizes */
+/* Headings - slightly increase default font sizes */
 h1 { font-size: 2.5rem; }
 h2 { font-size: 2rem; }
 h3 { font-size: 1.5rem; }
 h4 { font-size: 1.25rem; }
 h5 { font-size: 1rem; }
 h6 { font-size: 0.75rem; }
+/* reduce default line height */
+h1, h2, h3, h4, h5, h6, { line-height: 1.25em; }
 
-/* images and videos */
+/* Images and Videos */
 img,
 video {
   border-radius: var(--border-radius);
@@ -118,20 +114,23 @@ ul li { padding-left: 1em; }
 ol li { list-style: decimal inside; }
 ul li { list-style: inside; }
 
-/* main page content section */
+/* Main Page Content Section */
+main { padding: var(--main-spacing) 0; }
 main .wrapper {
   display: flex;
   flex-direction: column;
   gap: var(--main-spacing);
 }
 
-/* svg defaults */
+/* SVG Images */
 svg { fill: var(--light); }
 
 
 /* Custom Classes ----------------------------------------------------------- */
+
 /* Grouped Article Layouts */
-/* Grid of Articles */
+
+/* Grid Layout */
 .article-grid {
   display: grid;
   gap: var(--main-spacing);
@@ -148,22 +147,18 @@ svg { fill: var(--light); }
   flex-direction: column;
   gap: calc(var(--main-spacing) / 2);
 }
+/* grid article card images */
 .article-grid article img {
   aspect-ratio: 2 / 1;
   object-fit: cover;
   width: 100%;
 }
-.article-grid article h1,
-.article-grid article h2,
-.article-grid article h3,
-.article-grid article h4,
-.article-grid article h5,
-.article-grid article h6,
+/* grid article links */
 .article-grid article a {
   line-height: 1.25em;
 }
 
-/* List of Articles */
+/* List Layout */
 .article-list {
   display: flex;
   flex-direction: column;
@@ -183,49 +178,52 @@ svg { fill: var(--light); }
 .article-gallery > *:last-child { border-bottom: 0; }
 
 
+/* Page Breadcrumb Links */
 #breadcrumbs {
   display: flex;
   flex-wrap: wrap;
   gap: 0.5em;
 }
 
-/* blog post date text */
+/* Article Date Text */
 .date-text { color: var(--grey-500); }
 
 
-figure.emphasized figcaption {
+/* Emphasized Figure Caption */
+figcaption.emphasized {
   font-style: normal;
   font-weight: bold;
   font-size: 2rem;
 }
 
+/* Basic Flexbox Container - can be extended for a page's needs */
 .flex {
   display: flex;
   gap: var(--main-spacing);
 }
 
+/* Indent a Page Section */
 .inset-block {
   padding-left: var(--main-spacing);
   padding-right: var(--main-spacing);
 }
 
 /*
-  Page Title Area:
+  Page Title Area: (underline it)
   - either just an h1 tag,
   - or a container with an h1 and other details inside.
-  (underline it)
 */
 #overview, h1 {
   border-bottom: 3px solid var(--grey-400);
   padding-bottom: var(--main-spacing);
 }
 /*
-  remove underline if h1 is inside overview container,
-  since container already has the underline
+  remove the h1 underline if the h1 is inside an #overview container,
+  since #overview already has the underline
 */
 #overview h1 {
   border-bottom: 0;
-  padding: inherit;
+  padding-bottom: 0;
 }
 
 /* page wrapper to center content */
@@ -295,12 +293,19 @@ header nav {
   padding-bottom: var(--main-spacing);
 }
 header.active nav { display: flex; }
+
 header nav a { color: var(--light); }
+header nav a:hover { color: var(--blue-400); }
 
 
 /* Hamburger Button */
+#hamburger {
+  cursor: pointer;
+  background: 0;
+  border: 0;
+}
 #hamburger:hover svg {
-  fill: var(--blue-600);
+  fill: var(--blue-400);
 }
 /* toggle hamburger "bars" svg with "x" svg */
 header .hamburger-x { display: none; }
@@ -334,7 +339,7 @@ footer .wrapper {
   flex-direction: column;
   gap: var(--main-spacing);
   justify-content: center;
-  padding: var(--main-spacing);
+  padding: calc(var(--main-spacing) / 2) var(--main-spacing);
   text-align: center;
 }
 
@@ -345,14 +350,26 @@ footer nav {
   gap: var(--main-spacing);
 }
 
+footer a {
+  color: var(--light);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 0.75em;
+}
+footer a:hover { color: var(--blue-400); }
+
+footer svg {
+  --size: 30px;
+  width: var(--size);
+  height: var(--size);
+}
+footer a:hover svg { fill: var(--blue-400); }
+
+
 @media (min-width: 1000px) {
   footer .wrapper {
     flex-direction: row;
     justify-content: space-between;
   }
-}
-
-/* Main --------------------------------------------------------------------- */
-main {
-  padding: var(--main-spacing) 0;
 }
