header title image hover effect

--- a/main.css
+++ b/main.css
@@ -284,6 +284,7 @@ header #header-title img,
 
 /* Title Icon Image */
 #header-title img { border-radius: 50%; }
+#header-title:hover img { filter: brightness(1.25); }
 
 /* Nav Links */
 header nav {
