--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 * {
   /* Colors */
   --light: #ffffff;
-  /* --grey-050: #f5f5f5; */
+  --grey-050: #f5f5f5;
   --grey-100: #ededed;
   --grey-200: #dedede;
   /* --grey-300: #929ca6; */
@@ -49,9 +49,11 @@ a:hover {
 body {
   overflow-x: hidden;  /* failsafe - prevent overflow from breaking layout */
   /* Grid Background */
+  --bg-color: var(--light);
+  --grid-color: var(--grey-050);
   background-image:
-    linear-gradient(#f5f5f5 1px, transparent 1px),
-    linear-gradient(to right, #f5f5f5 1px, #ffffff 1px);
+    linear-gradient(var(--grid-color) 1px, transparent 1px),
+    linear-gradient(to right, var(--grid-color) 1px, var(--bg-color) 1px);
   background-size: 20px 20px;
   /* Scrollbar Always Active - prevents layout shifts */
   overflow-y: scroll;
