--- a/main.css
+++ b/main.css
@@ -68,11 +68,12 @@ main { flex: 1; }          /* ...the main element fills all available height. */
 code {
   display: block;
   background: var(--grey-100);
+  border-radius: var(--border-radius);
   font-family: monospace;
-  white-space: pre;
   max-width: 100%;
   overflow-x: auto;
   padding: var(--main-spacing);
+  white-space: pre;
 }
 
 /* Figures (images with captions) */
@@ -98,8 +99,8 @@ h1, h2, h3, h4, h5, h6 { line-height: 1.25em; }
 img,
 video {
   border-radius: var(--border-radius);
-  max-width: 100%;
   height: auto;
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -140,14 +141,14 @@ svg { fill: var(--light); }
 }
 /* grid article cards */
 .article-grid article {
-  max-width: 100%;
-  overflow: hidden;
   background: var(--grey-100);
   border-radius: var(--border-radius);
-  padding: var(--main-spacing);
   display: flex;
   flex-direction: column;
   gap: calc(var(--main-spacing) / 2);
+  max-width: 100%;
+  overflow: hidden;
+  padding: var(--main-spacing);
 }
 /* grid article card images */
 .article-grid article img {
@@ -193,9 +194,9 @@ svg { fill: var(--light); }
 
 /* Emphasized Figure Caption */
 figcaption.emphasized {
+  font-size: 2rem;
   font-style: normal;
   font-weight: bold;
-  font-size: 2rem;
 }
 
 /* Basic Flexbox Container - can be extended for a page's needs */
@@ -230,8 +231,8 @@ figcaption.emphasized {
 
 /* page wrapper to center content */
 .wrapper {
-  max-width: var(--page-width);
   margin: auto;
+  max-width: var(--page-width);
   padding: 0 var(--main-spacing);
 }
 
@@ -251,12 +252,12 @@ header {
       - nav is visible, and displays below icon image and hamburger button
 */
 header .wrapper {
+  align-items: flex-start;
   display: flex;
   gap: var(--main-spacing);
-  padding-top: calc(var(--main-spacing) / 2);
-  padding-bottom: calc(var(--main-spacing) / 2);
   justify-content: space-between;
-  align-items: flex-start;
+  padding-bottom: calc(var(--main-spacing) / 2);
+  padding-top: calc(var(--main-spacing) / 2);
 }
 header.active .wrapper {
   display: grid;
@@ -279,8 +280,8 @@ header #hamburger { line-height: 0; }
 header #header-title img,
 #hamburger svg {
   --size: 40px;
-  width: var(--size);
   height: var(--size);
+  width: var(--size);
 }
 
 
@@ -324,8 +325,8 @@ header.active .hamburger-x { display: block; }
   #hamburger { display: none; }
   /* nav links on one line */
   header nav {
-    display: flex;
     align-self: center;
+    display: flex;
     flex-direction: row;
     padding-bottom: 0;
   }
@@ -348,23 +349,23 @@ footer .wrapper {
 }
 
 footer nav {
-  justify-content: center;
   display: flex;
   flex-wrap: wrap;
   gap: var(--main-spacing);
+  justify-content: center;
 }
 
 footer a {
+  align-items: center;
   color: var(--light);
   display: flex;
   flex-direction: column;
-  align-items: center;
   font-size: 0.75em;
 }
 footer a svg {
   --size: 30px;
-  width: var(--size);
   height: var(--size);
+  width: var(--size);
 }
 footer a:hover { color: var(--blue-400); }
 footer a:hover svg { fill: var(--blue-400); }
