Added TW attribution to footer

--- a/main.css
+++ b/main.css
@@ -356,6 +356,7 @@ footer nav {
 }
 
 footer a {
+  --size: 30px;  /* defines the size of images within footer links */
   align-items: center;
   color: var(--light);
   display: flex;
@@ -363,7 +364,6 @@ footer a {
   font-size: 0.75em;
 }
 footer a svg {
-  --size: 30px;
   height: var(--size);
   width: var(--size);
 }
@@ -371,9 +371,30 @@ footer a:hover { color: var(--blue-400); }
 footer a:hover svg { fill: var(--blue-400); }
 
 
+#tw-attribution img {
+  height: var(--size);
+  width: var(--size);
+}
+#tw-attribution:hover img {
+  filter: brightness(1.25);
+}
+
+
+/*
+  Desktop Layout:
+  - group name and links on left side
+  - TW attribution on right side
+*/
 @media (min-width: 1000px) {
   footer .wrapper {
-    flex-direction: row;
+    display: grid;
+    grid-template-areas:
+      "name attribution"
+      "nav attribution";
     justify-content: space-between;
+    gap: 0;
   }
+  footer > b:first-child { grid-area: name; }
+  footer nav { grid-area: nav; }
+  footer #tw-attribution { grid-area: attribution; }
 }
