fixed resume mobile style
Previously applied style added a border-bottom when it should have been a border-top, but had gone unnoticed because it was a subtle effect.

--- a/resume/index.css
+++ b/resume/index.css
@@ -1,8 +1,8 @@
 @media (max-width: 1000px) {
-  #resume :not(#overview) .flex:not(:last-child) {
-    border-bottom: 1px dashed var(--grey-200);
+  #resume :not(#overview) > .flex {
+    border-top: 1px dashed var(--grey-200);
     flex-direction: column;
-    padding-bottom: var(--main-spacing);
+    padding-top: var(--main-spacing);
   }
 }
 
