Resume CSS Cleanup

--- a/resume/index.css
+++ b/resume/index.css
@@ -1,20 +1,4 @@
-/* Row-Style Sub-Sections */
-/* items spaced as far apart as possible */
-#resume .flex { justify-content: space-between; }
-/* add subtle border to separate them */
-#resume :not(#overview) > .flex {
-  border-top: 1px dashed var(--grey-200);
-  padding-top: var(--main-spacing);
-}
-/* on mobile, rows reflow into columns */
-@media (max-width: 1000px) {
-  #resume :not(#overview) > .flex {
-    flex-direction: column;
-  }
-}
-
-
-/* Resume Main Content Area */
+/* Resume Main Content Area ------------------------------------------------ */
 #resume article,
 #resume article section {
   display: flex;
@@ -36,15 +20,33 @@
 }
 
 
+/* Row-Style Sub-Sections -------------------------------------------------- */
+
+/* items spaced as far apart as possible */
+#resume .flex { justify-content: space-between; }
+
+/* add subtle border to separate them */
+#resume :not(#overview) > .flex {
+  border-top: 1px dashed var(--grey-200);
+  padding-top: var(--main-spacing);
+}
+
+/* on mobile, rows reflow into columns */
+@media (max-width: 1000px) {
+  #resume :not(#overview) > .flex {
+    flex-direction: column;
+  }
+}
+
+
+/* Individual Resume Sections ---------------------------------------------- */
+
 #overview {
   color: var(--grey-500);
   text-align: center;
 }
 /* center overview flex items */
-#overview .flex {
-  justify-content: center;
-}
-
+#overview .flex { justify-content: center; }
 
 #education {
   display: flex;
