Made Homepage Style Special
Homepage does not have a white background like all other website pages.
Changed article card portrait orientation image backgrounds to a lighter shade of grey

--- a/home/index.css
+++ b/home/index.css
@@ -1,3 +1,6 @@
+main#home .wrapper { background:var(--grey-600); }
+
+h1 { color: var(--light); }
 .article-grid article {
   text-align: center;
 }
