--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@
   --grey-050: #f5f5f5;
   --grey-100: #ededed;
   --grey-200: #dedede;
-  /* --grey-300: #929ca6; */
+  --grey-300: #929ca6;
   --grey-400: #78818a;
   --grey-500: #5e6770;
   --grey-600: #343a40;
@@ -80,14 +80,19 @@ figure figcaption {
 }
 
 /* Headings - slightly increase default font sizes */
-h1 { font-size: 2.5rem; }
-h2 { font-size: 2rem; }
-h3 { font-size: 1.5rem; }
-h4 { font-size: 1.25rem; }
+h1 { font-size: 2rem; }
+h2 { font-size: 1.5rem; }
+h3 { font-size: 1.25rem; }
+h4 { font-size: 1.1rem; }
 h5 { font-size: 1rem; }
 h6 { font-size: 0.75rem; }
 /* reduce default line height */
 h1, h2, h3, h4, h5, h6 { line-height: 1.25em; }
+
+html {
+  scroll-behavior: smooth;  /* smooth scrolling for anchor links */
+  scroll-padding-top: 75px;  /* space for sticky header */
+}
 
 /* Images and Videos */
 img,
@@ -255,6 +260,7 @@ header {
   position: sticky;
   right: 0;
   top: 0;
+  z-index: 1000;  /* ensure always displays on top of page content */
 }
 
 /*
