Added MathJax Wrapper Element
To prevent long MathJax equations from overflowing on mobile devices, created the ".math-wrap" CSS class. Wrap MathJax equations in a <div class="math-wrap"> tag to prevent overflow.

--- a/main.css
+++ b/main.css
@@ -221,6 +221,9 @@ figcaption.emphasized {
   padding-right: var(--main-spacing);
 }
 
+/* MathJax Equations Wrapper - prevents overflow on mobile */
+.math-wrap svg { max-width: 100%; }
+
 /*
   Page Title Area: (underline it)
   - either just an h1 tag,
